# nix-csi

./: .gitignore  CLAUDE.md  README.md  TODO.md  default.nix  deploy  flake.nix  liximage.nix  reset  scratchimage.nix
.claude/: project-notes.md
.github/actions/setup-nix/: action.yaml
.github/workflows/: ci.yaml  integration-test.yaml  release.yaml
container/: cache.nix  csi.nix  default.nix
demo/: nixos.nix  pod.nix
environments/cache/: default.nix
environments/node/: default.nix
guests/: cache.nix  ctest.nix
kubenix/: cache.nix  config.nix  ctest.nix  daemonset.nix  default.nix  namespace.nix  options.nix  rbac.nix  secret.nix
kubenix/ci/: default.nix
nix/: containerImage.nix
pkgs/: asyncache.nix  default.nix  kr8s.nix
pkgs/csi-proto-python/: default.nix
python/: .pyrightconfig.json  default.nix  pyproject.toml
python/nix_cache/: cli.py
python/nix_csi/: __init__.py  copytocache.py  errorhandling.py  identityservicer.py  kubernetes.py  runbuild.py  service.py  subprocessing.py
python/nix_timegc/: cli.py
tmp/: watch.py
