[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nix-csi"
version = "0.1.13"
description = "CSI driver populating mounts with /nix"
authors = [
    { name="Carl Andersson", email="carl@postspace.net" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = []

[project.scripts]
nix-csi = "nix_csi.cli:main"
nix-cache = "nix_cache.cli:main"
nix-timegc = "nix_timegc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["nix_csi", "nix_cache", "nix_timegc"]
